repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_vertical_allrepos__columns.snap
---
source: repology-webapp/tests/snapshot_tests/badge_vertical_allrepos.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 2632
---
<svg xmlns="http://www.w3.org/2000/svg" width="521" height="45"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="15" font-weight="bold"><text x="260" y="13" dominant-baseline="central" fill="#010101" fill-opacity=".3">Packaging status</text><text x="260" y="12" dominant-baseline="central">Packaging status</text></g><rect x="57" y="25" width="60" height="20" fill="#4c1"/><rect x="207" y="25" width="60" height="20" fill="#e05d44"/><rect x="334" y="25" width="60" height="20" fill="#e05d44"/><rect x="461" y="25" width="60" height="20" fill="#e05d44"/><rect y="25" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="52" y="36" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">FreeBSD</text><text x="52" y="35" text-anchor="end" dominant-baseline="central">FreeBSD</text><text x="87" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.1</text><text x="87" y="35" text-anchor="middle" dominant-baseline="central">1.1</text><text x="202" y="36" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">freshcode.club</text><text x="202" y="35" text-anchor="end" dominant-baseline="central">freshcode.club</text><text x="237" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="237" y="35" text-anchor="middle" dominant-baseline="central">1.0</text><text x="329" y="36" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Ubuntu 12</text><text x="329" y="35" text-anchor="end" dominant-baseline="central">Ubuntu 12</text><text x="364" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">0.9</text><text x="364" y="35" text-anchor="middle" dominant-baseline="central">0.9</text><text x="456" y="36" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Ubuntu 24</text><text x="456" y="35" text-anchor="end" dominant-baseline="central">Ubuntu 24</text><text x="491" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="491" y="35" text-anchor="middle" dominant-baseline="central">1.0</text></g></g></svg>
